<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exchange2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tv1">Vorname:</string>
    <string name="tv2">Nachname:</string>
    <string name="btn1">uebergabe</string>
    <string name="btn2">holen</string>
    <string name="btn3">zurueck</string>

</resources>