<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etVornameSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/etNachnameSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etVornameSub"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etNachnameSub"
        android:layout_marginRight="17dp"
        android:layout_toLeftOf="@+id/etNachnameSub"
        android:text="@string/tv2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:text="@string/tv1" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="100dp"
        android:onClick="BtnHolen"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btnSub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSub"
        android:layout_alignBottom="@+id/btnSub"
        android:layout_alignLeft="@+id/etNachnameSub"
        android:layout_marginLeft="45dp"
        android:text="@string/btn3" 
        android:onClick="BtnZurueck"/>

</RelativeLayout>